# trajviz

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: generate_demo.py
tests/: __init__.py  test_config.py  test_projection.py  test_renderer.py  test_video.py
trajviz/: __init__.py  config.py  projection.py  renderer.py  video.py
