[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "beartype>=0.19.0",
  "difflogtest",
  "jaxtyping>=0.2.25",
  "numpy",
  "opencv-python-headless",
  "pydantic>=2"
]
description = "Fast 3D trajectory video renderer using NumPy + OpenCV"
name = "trajviz"
requires-python = ">=3.10"
version = "0.0.1"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
exclude = [
  "logs/"
]
indent-width = 4
line-length = 79
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["ANN401", "C901", "COM812", "D203", "D211", "D213", "E501", "ERA001", "F722", "F821", "G004", "ISC001", "N812", "PERF203", "PERF401", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901", "RUF012", "S603", "S607", "SIM115", "SLF001", "T201", "TCH010", "TRY301"]
select = ["ALL"]

[tool.tomlsort]
all = true
