[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "me@afromero.co", name = "Andres Romero"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Visualization",
  "Typing :: Typed"
]
dependencies = [
  "beartype>=0.19.0",
  "difflogtest",
  "jaxtyping>=0.2.25",
  "numpy",
  "opencv-python-headless",
  "pydantic>=2"
]
description = "Fast 3D trajectory video renderer using NumPy + OpenCV"
keywords = ["3d", "camera", "opencv", "trajectory", "video", "visualization"]
license = {text = "MIT"}
name = "trajviz"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest"
]

[project.urls]
Changelog = "https://github.com/affromero/trajviz/releases"
Homepage = "https://github.com/affromero/trajviz"
Issues = "https://github.com/affromero/trajviz/issues"
Repository = "https://github.com/affromero/trajviz"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
follow_untyped_imports = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = ["--tb=short", "-v"]
testpaths = ["tests"]

[tool.ruff]
exclude = [
  "logs/"
]
indent-width = 4
line-length = 79
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["ANN401", "C901", "COM812", "D203", "D211", "D213", "E501", "ERA001", "F722", "F821", "G004", "ISC001", "N812", "PERF203", "PERF401", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901", "RUF012", "S603", "S607", "SIM115", "SLF001", "T201", "TCH010", "TRY301"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["INP001"]
"tests/*" = ["D100", "D102", "D103", "INP001", "PT011", "S101", "S108"]

[tool.tomlsort]
all = true
